--- a/init.engineer-iOS-App/View/Base.lproj/Main.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -16,7 +17,7 @@
         <!--首頁-->
         <scene sceneID="Uiw-0Y-SdL">
             <objects>
-                <viewController id="dmE-e9-gNw" sceneMemberID="viewController">
+                <viewController id="dmE-e9-gNw" customClass="IndexTabController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0jz-nh-ysL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -254,22 +255,46 @@
         <!--文章列表-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="IndexFragmentController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ArticleTabController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章列表 Article" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5y-du-l9j">
-                                <rect key="frame" x="135.5" y="438.5" width="143" height="19"/>
+                                <rect key="frame" x="135.5" y="64" width="143" height="19"/>
                                 <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oWL-7i-Kx2">
+                                <rect key="frame" x="20" y="91" width="374" height="702"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cbh-g0-8cb">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="iCQ-xO-zgD">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Qmk-J8-SiH">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="0.13333499430000001" green="0.13333114979999999" blue="0.13333195449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="G5y-du-l9j" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ZBO-RO-Cbn"/>
+                            <constraint firstItem="oWL-7i-Kx2" firstAttribute="top" secondItem="G5y-du-l9j" secondAttribute="bottom" constant="8" id="52O-e6-XwA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oWL-7i-Kx2" secondAttribute="bottom" constant="20" id="CPr-oE-Z00"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oWL-7i-Kx2" secondAttribute="trailing" constant="20" id="aVb-Fs-7Bc"/>
                             <constraint firstItem="G5y-du-l9j" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nfM-0Y-bt4"/>
+                            <constraint firstItem="G5y-du-l9j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="o7y-VN-Ekz"/>
+                            <constraint firstItem="oWL-7i-Kx2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="x6j-1x-t3L"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -282,11 +307,56 @@
         <!--儀錶板-->
         <scene sceneID="r5F-2n-kl4">
             <objects>
-                <viewController id="ifS-1X-e4W" sceneMemberID="viewController">
+                <viewController id="ifS-1X-e4W" customClass="DashboardTabController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LjI-ly-DiX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="儀錶板 Dashboard" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lbC-Yo-O3A">
+                                <rect key="frame" x="135" y="64" width="144.5" height="19"/>
+                                <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rJg-gQ-NbV">
+                                <rect key="frame" x="335" y="44" width="59" height="59"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rJg-gQ-NbV" secondAttribute="height" multiplier="1:1" id="h5I-xH-Rbr"/>
+                                </constraints>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vXf-vP-K88">
+                                <rect key="frame" x="20" y="111" width="374" height="682"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lgs-ZJ-7IN">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="G9a-kl-9aA">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gSZ-Tc-tFm">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rJg-gQ-NbV" firstAttribute="bottom" secondItem="lbC-Yo-O3A" secondAttribute="bottom" constant="20" id="1SL-JW-Iqd"/>
+                            <constraint firstItem="aq3-Jp-RTS" firstAttribute="trailing" secondItem="rJg-gQ-NbV" secondAttribute="trailing" constant="20" id="D5a-KY-QgS"/>
+                            <constraint firstItem="lbC-Yo-O3A" firstAttribute="top" secondItem="aq3-Jp-RTS" secondAttribute="top" constant="20" id="DMc-2Z-2b6"/>
+                            <constraint firstItem="vXf-vP-K88" firstAttribute="top" secondItem="rJg-gQ-NbV" secondAttribute="bottom" constant="8" id="HZC-1C-7yc"/>
+                            <constraint firstItem="vXf-vP-K88" firstAttribute="leading" secondItem="aq3-Jp-RTS" secondAttribute="leading" constant="20" id="VjH-13-nL5"/>
+                            <constraint firstItem="lbC-Yo-O3A" firstAttribute="centerX" secondItem="aq3-Jp-RTS" secondAttribute="centerX" id="h7o-y1-sWw"/>
+                            <constraint firstItem="rJg-gQ-NbV" firstAttribute="top" secondItem="aq3-Jp-RTS" secondAttribute="top" id="msl-Uy-f3j"/>
+                            <constraint firstItem="aq3-Jp-RTS" firstAttribute="trailing" secondItem="vXf-vP-K88" secondAttribute="trailing" constant="20" id="oNJ-Xu-faf"/>
+                            <constraint firstItem="aq3-Jp-RTS" firstAttribute="bottom" secondItem="vXf-vP-K88" secondAttribute="bottom" constant="20" id="pdX-bx-Pxc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aq3-Jp-RTS"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="儀錶板" id="g8e-zp-7sM"/>
@@ -298,11 +368,23 @@
         <!--發表文章-->
         <scene sceneID="wM2-So-pFy">
             <objects>
-                <viewController id="Zzm-8s-lRu" sceneMemberID="viewController">
+                <viewController id="Zzm-8s-lRu" customClass="PublishTabController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5jU-Ng-RCl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="發表文章 NewArticle" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ujf-cJ-dOJ">
+                                <rect key="frame" x="121.5" y="64" width="171" height="19"/>
+                                <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ujf-cJ-dOJ" firstAttribute="top" secondItem="v5X-aM-Yal" secondAttribute="top" constant="20" id="VK7-0Q-ULi"/>
+                            <constraint firstItem="Ujf-cJ-dOJ" firstAttribute="centerX" secondItem="v5X-aM-Yal" secondAttribute="centerX" id="znP-K4-KUL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="v5X-aM-Yal"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="發表文章" id="WFH-pU-0Ld"/>
